--- a/login.html
+++ b/login.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="assets/css/style.css">
+     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Inscription</title>
-    <script src="assets/js/scriptLogin.js"></script>
+    <script src="/assets/js/scriptlogin.js"></script>
 </head>
 <body>
     <form>
@@ -17,5 +17,7 @@
         <button type="submit"> Inscription</button>
     </form>
 
+
+    
 </body>
 </html>
