--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <ul>
             <li><a href="login.html">inscription</a></li>
+            <li><a href="color.html">Color</a></li>
         </ul>
     </nav>
 </body>
